[package]
name = "agbrs-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
agb = { git = "https://github.com/zpg6/agb", branch = "feat/async", features = ["embassy"]}
embassy-agb = { git = "https://github.com/zpg6/agb", branch = "feat/async" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-spin", "executor-thread"] }
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section", "fallback"] }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
